--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,11 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>com.course.mm</groupId>
+                <artifactId>mm-resource-creator</artifactId>
+                <version>${revision}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>${lombok.version}</version>
