--- a/mm-resource-creator/pom.xml
+++ b/mm-resource-creator/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>mm-parent</artifactId>
         <groupId>com.course.mm</groupId>
-        <version>1.3.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>mm-resource-creator</artifactId>
