--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <groupId>com.course.mm</groupId>
     <artifactId>mm-parent</artifactId>
     <packaging>pom</packaging>
-    <version>1.3.0-SNAPSHOT</version>
+    <version>${revision}</version>
 
     <modules>
         <module>mm-resource-creator</module>
@@ -20,7 +20,7 @@
     </modules>
 
     <properties>
-        <revision>1.3-SNAPSHOT</revision>
+        <revision>master-1.3.2-SNAPSHOT</revision>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>11</java.version>
