--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
       # Use mvn clean and package as the standard maven build phase
       - run:
           name: Build
-          command: mvn clean deploy -Ppackagecloud-profile
+          command: mvn clean deploy -Ppackagecloud-profile -s .circleci/settings.xml
       # Then run your tests!
       - run:
           name: Test
