--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,12 @@
         <module>mm-logic</module>
     </modules>
 
+    <scm>
+        <developerConnection>scm:git:https://github.com/OritYs/maven-multi-modules.git</developerConnection>
+        <url>https://github.com/OritYs/maven-multi-modules.git</url>
+        <tag>MVN01</tag>
+    </scm>
+
     <properties>
         <revision>master-1.3.2-SNAPSHOT</revision>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -98,6 +104,16 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.3</version>
+                <configuration>
+
+                    <scmCommentPrefix>[maven-release-plugin] [skip ci]</scmCommentPrefix>
+
+                </configuration>
             </plugin>
         </plugins>
     </build>
